--- a/_config.yml
+++ b/_config.yml
@@ -85,10 +85,10 @@ author:
   bio              : "Lecturer in Information Security at UCL"
   location         : "United Kingdom"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=B2MxYPYAAAAJ&hl=en"
   email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : 
   uri              :
   bitbucket        :
   codepen          :
@@ -100,16 +100,14 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "https://www.linkedin.com/in/markwarner3/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BIOOtUj%2B6RMGeTDbJu8JZJA%3D%3D"
+  orcid            : "http://orcid.org/0000-0002-7494-6275"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "privacurity"
   vine             :
   weibo            :
   xing             :
