--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/markwarner3/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BIOOtUj%2B6RMGeTDbJu8JZJA%3D%3D"
+  linkedin         : "markwarner3"
   orcid            : "http://orcid.org/0000-0002-7494-6275"
   pinterest        :
   soundcloud       :
